# codex-swarm

./: README.md  pyproject.toml
config/: defaults.yaml
docs/: patch-guide.md
src/codex_swarm/: __init__.py  budget_tracker.py  cli.py  config.py  dispatch_parser.py  ipc_server.py  logging.py  merge_manager.py  model_catalog.py  models.py  orchestrator.py  patch_guide.py  result_compressor.py  strategy_engine.py  supervisor_manager.py  worker_manager.py  worktree_manager.py
src/codex_swarm/gui/: __init__.py  app.py  history_store.py  main_window.py  session_controller.py  session_state.py  types.py
src/codex_swarm/tui/: app.py  events.py
tests/: conftest.py
tests/integration/: test_approval_gate.py  test_e2e_codex_exec.py  test_merge_conflicts.py  test_merge_lock.py  test_orchestrator_strategies.py  test_strategy_engine.py  test_tui_events.py  test_worker_status_tracking.py
tests/unit/: test_budget_tracker.py  test_cli_gui.py  test_config.py  test_dispatch_parser.py  test_gui_config.py  test_history_store.py  test_ipc_event_broadcasts.py  test_ipc_server.py  test_model_catalog.py  test_orchestrator_supervisor_control.py  test_patch_guide.py  test_result_compressor.py  test_scope_enforcement.py  test_session_state.py  test_supervisor_kill.py
